--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.1",
+    "react-native-modal": "^3.1.0",
+    "react-native-popup-dialog": "^0.9.35",
     "react-native-slider": "^0.11.0",
     "react-navigation": "^1.0.0-beta.11"
   },
