--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-popup-dialog": "^0.9.35",
     "react-native-simple-radio-button": "^2.6.1",
     "react-native-slider": "^0.11.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "rn-viewpager": "^1.2.4"
   },
   "devDependencies": {
     "babel-jest": "21.0.0",
