--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.1",
     "react-native-flexi-radio-button": "^0.2.1",
+    "react-native-maps": "^0.17.0",
     "react-native-modalbox": "^1.4.2",
     "react-native-popup-dialog": "^0.9.35",
     "react-native-progress-circle": "^2.0.0",
